--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
         <dependency>
             <groupId>com.github.PowerNukkitX</groupId>
             <artifactId>PowerNukkitX</artifactId>
-            <version>master-SNAPSHOT</version>
+            <version>0684ef7dbe</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
